
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static const char *stripes_texture_path(unsigned id)
{
   switch (id)
   {
      case 151:



         return "retroarch.png";

      case 135:
         return "settings.png";
      case 158:
         return "history.png";
      case 161:
         return "favorites.png";
      case 175:
         return "add-favorite.png";
      case 147:
         return "musics.png";
      case 136:
         return "setting.png";
      case 133:
         return "subsetting.png";
      case 174:
         return "arrow.png";
      case 139:
         return "run.png";
      case 169:
         return "close.png";
      case 141:
         return "resume.png";
      case 170:
         return "clock.png";
      case 172:
         return "battery-full.png";
      case 173:
         return "battery-charging.png";
      case 145:
         return "pointer.png";
      case 138:
         return "savestate.png";
      case 152:
         return "loadstate.png";
      case 130:
         return "undo.png";
      case 167:
         return "core-infos.png";
      case 129:
         return "wifi.png";
      case 166:
         return "core-options.png";
      case 155:
         return "core-input-remapping-options.png";
      case 171:
         return "core-cheat-options.png";
      case 163:
         return "core-disk-options.png";
      case 134:
         return "core-shader-options.png";
      case 177:
         return "achievement-list.png";
      case 137:
         return "screenshot.png";
      case 143:
         return "reload.png";
      case 142:
         return "rename.png";
      case 160:
         return "file.png";
      case 159:
         return "folder.png";
      case 128:
         return "zip.png";
      case 148:
         return "music.png";
      case 162:
         return "favorites-content.png";
      case 157:
         return "image.png";
      case 150:
         return "movie.png";
      case 168:
         return "core.png";
      case 144:
         return "database.png";
      case 165:
         return "cursor.png";
      case 131:
         return "on.png";
      case 132:
         return "off.png";
      case 176:
         return "add.png";
      case 154:
         return "key.png";
      case 153:
         return "key-hover.png";
      case 164:
         return "dialog-slice.png";

   }

   return ((void*)0);
}
