; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/drivers/extr_stripes.c_stripes_texture_path.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/drivers/extr_stripes.c_stripes_texture_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"retroarch.png\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"settings.png\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"history.png\00", align 1
@.str.3 = private unnamed_addr constant [14 x i8] c"favorites.png\00", align 1
@.str.4 = private unnamed_addr constant [17 x i8] c"add-favorite.png\00", align 1
@.str.5 = private unnamed_addr constant [11 x i8] c"musics.png\00", align 1
@.str.6 = private unnamed_addr constant [12 x i8] c"setting.png\00", align 1
@.str.7 = private unnamed_addr constant [15 x i8] c"subsetting.png\00", align 1
@.str.8 = private unnamed_addr constant [10 x i8] c"arrow.png\00", align 1
@.str.9 = private unnamed_addr constant [8 x i8] c"run.png\00", align 1
@.str.10 = private unnamed_addr constant [10 x i8] c"close.png\00", align 1
@.str.11 = private unnamed_addr constant [11 x i8] c"resume.png\00", align 1
@.str.12 = private unnamed_addr constant [10 x i8] c"clock.png\00", align 1
@.str.13 = private unnamed_addr constant [17 x i8] c"battery-full.png\00", align 1
@.str.14 = private unnamed_addr constant [21 x i8] c"battery-charging.png\00", align 1
@.str.15 = private unnamed_addr constant [12 x i8] c"pointer.png\00", align 1
@.str.16 = private unnamed_addr constant [14 x i8] c"savestate.png\00", align 1
@.str.17 = private unnamed_addr constant [14 x i8] c"loadstate.png\00", align 1
@.str.18 = private unnamed_addr constant [9 x i8] c"undo.png\00", align 1
@.str.19 = private unnamed_addr constant [15 x i8] c"core-infos.png\00", align 1
@.str.20 = private unnamed_addr constant [9 x i8] c"wifi.png\00", align 1
@.str.21 = private unnamed_addr constant [17 x i8] c"core-options.png\00", align 1
@.str.22 = private unnamed_addr constant [33 x i8] c"core-input-remapping-options.png\00", align 1
@.str.23 = private unnamed_addr constant [23 x i8] c"core-cheat-options.png\00", align 1
@.str.24 = private unnamed_addr constant [22 x i8] c"core-disk-options.png\00", align 1
@.str.25 = private unnamed_addr constant [24 x i8] c"core-shader-options.png\00", align 1
@.str.26 = private unnamed_addr constant [21 x i8] c"achievement-list.png\00", align 1
@.str.27 = private unnamed_addr constant [15 x i8] c"screenshot.png\00", align 1
@.str.28 = private unnamed_addr constant [11 x i8] c"reload.png\00", align 1
@.str.29 = private unnamed_addr constant [11 x i8] c"rename.png\00", align 1
@.str.30 = private unnamed_addr constant [9 x i8] c"file.png\00", align 1
@.str.31 = private unnamed_addr constant [11 x i8] c"folder.png\00", align 1
@.str.32 = private unnamed_addr constant [8 x i8] c"zip.png\00", align 1
@.str.33 = private unnamed_addr constant [10 x i8] c"music.png\00", align 1
@.str.34 = private unnamed_addr constant [22 x i8] c"favorites-content.png\00", align 1
@.str.35 = private unnamed_addr constant [10 x i8] c"image.png\00", align 1
@.str.36 = private unnamed_addr constant [10 x i8] c"movie.png\00", align 1
@.str.37 = private unnamed_addr constant [9 x i8] c"core.png\00", align 1
@.str.38 = private unnamed_addr constant [13 x i8] c"database.png\00", align 1
@.str.39 = private unnamed_addr constant [11 x i8] c"cursor.png\00", align 1
@.str.40 = private unnamed_addr constant [7 x i8] c"on.png\00", align 1
@.str.41 = private unnamed_addr constant [8 x i8] c"off.png\00", align 1
@.str.42 = private unnamed_addr constant [8 x i8] c"add.png\00", align 1
@.str.43 = private unnamed_addr constant [8 x i8] c"key.png\00", align 1
@.str.44 = private unnamed_addr constant [14 x i8] c"key-hover.png\00", align 1
@.str.45 = private unnamed_addr constant [17 x i8] c"dialog-slice.png\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @stripes_texture_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @stripes_texture_path(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %51 [
    i32 151, label %5
    i32 135, label %6
    i32 158, label %7
    i32 161, label %8
    i32 175, label %9
    i32 147, label %10
    i32 136, label %11
    i32 133, label %12
    i32 174, label %13
    i32 139, label %14
    i32 169, label %15
    i32 141, label %16
    i32 170, label %17
    i32 172, label %18
    i32 173, label %19
    i32 145, label %20
    i32 138, label %21
    i32 152, label %22
    i32 130, label %23
    i32 167, label %24
    i32 129, label %25
    i32 166, label %26
    i32 155, label %27
    i32 171, label %28
    i32 163, label %29
    i32 134, label %30
    i32 177, label %31
    i32 137, label %32
    i32 143, label %33
    i32 142, label %34
    i32 160, label %35
    i32 159, label %36
    i32 128, label %37
    i32 148, label %38
    i32 162, label %39
    i32 157, label %40
    i32 150, label %41
    i32 168, label %42
    i32 144, label %43
    i32 165, label %44
    i32 131, label %45
    i32 132, label %46
    i32 176, label %47
    i32 154, label %48
    i32 153, label %49
    i32 164, label %50
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %52

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %52

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %52

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %52

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %52

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %52

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %52

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %52

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %52

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %52

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.10, i64 0, i64 0), i8** %2, align 8
  br label %52

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.11, i64 0, i64 0), i8** %2, align 8
  br label %52

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.12, i64 0, i64 0), i8** %2, align 8
  br label %52

18:                                               ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.13, i64 0, i64 0), i8** %2, align 8
  br label %52

19:                                               ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.14, i64 0, i64 0), i8** %2, align 8
  br label %52

20:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.15, i64 0, i64 0), i8** %2, align 8
  br label %52

21:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.16, i64 0, i64 0), i8** %2, align 8
  br label %52

22:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.17, i64 0, i64 0), i8** %2, align 8
  br label %52

23:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.18, i64 0, i64 0), i8** %2, align 8
  br label %52

24:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.19, i64 0, i64 0), i8** %2, align 8
  br label %52

25:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.20, i64 0, i64 0), i8** %2, align 8
  br label %52

26:                                               ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.21, i64 0, i64 0), i8** %2, align 8
  br label %52

27:                                               ; preds = %1
  store i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.22, i64 0, i64 0), i8** %2, align 8
  br label %52

28:                                               ; preds = %1
  store i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.23, i64 0, i64 0), i8** %2, align 8
  br label %52

29:                                               ; preds = %1
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.24, i64 0, i64 0), i8** %2, align 8
  br label %52

30:                                               ; preds = %1
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.25, i64 0, i64 0), i8** %2, align 8
  br label %52

31:                                               ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.26, i64 0, i64 0), i8** %2, align 8
  br label %52

32:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.27, i64 0, i64 0), i8** %2, align 8
  br label %52

33:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.28, i64 0, i64 0), i8** %2, align 8
  br label %52

34:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.29, i64 0, i64 0), i8** %2, align 8
  br label %52

35:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.30, i64 0, i64 0), i8** %2, align 8
  br label %52

36:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.31, i64 0, i64 0), i8** %2, align 8
  br label %52

37:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.32, i64 0, i64 0), i8** %2, align 8
  br label %52

38:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.33, i64 0, i64 0), i8** %2, align 8
  br label %52

39:                                               ; preds = %1
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.34, i64 0, i64 0), i8** %2, align 8
  br label %52

40:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.35, i64 0, i64 0), i8** %2, align 8
  br label %52

41:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.36, i64 0, i64 0), i8** %2, align 8
  br label %52

42:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.37, i64 0, i64 0), i8** %2, align 8
  br label %52

43:                                               ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.38, i64 0, i64 0), i8** %2, align 8
  br label %52

44:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.39, i64 0, i64 0), i8** %2, align 8
  br label %52

45:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.40, i64 0, i64 0), i8** %2, align 8
  br label %52

46:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.41, i64 0, i64 0), i8** %2, align 8
  br label %52

47:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.42, i64 0, i64 0), i8** %2, align 8
  br label %52

48:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.43, i64 0, i64 0), i8** %2, align 8
  br label %52

49:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.44, i64 0, i64 0), i8** %2, align 8
  br label %52

50:                                               ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.45, i64 0, i64 0), i8** %2, align 8
  br label %52

51:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %52

52:                                               ; preds = %51, %50, %49, %48, %47, %46, %45, %44, %43, %42, %41, %40, %39, %38, %37, %36, %35, %34, %33, %32, %31, %30, %29, %28, %27, %26, %25, %24, %23, %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %53 = load i8*, i8** %2, align 8
  ret i8* %53
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
